add changes to the html and css files[finishes#159521967]

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,12 +5,12 @@
         <title>Sign up</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="main.css" rel="stylesheet" type="text/css" >
-    </head>
+        <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">    </head>
     <body>
         <div class="content">
             <div class="top">
                 <div class="logo">UBER</div>
-                <h1> Sign up to ride </h1>
+                <h1> Sign Up to Ride </h1>
                 <p class="heading_1">Safe, reliable trips in minutes</p>
             </div>
 
