make page responsive [finishes#159540280]

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -48,7 +48,8 @@
                     <input id="email" type="email" required placeholder="Email"/>
                     <label for="password">Enter a password (required)</label>
                     <input id="password" type="password" required placeholder="Password" autocomplete="off"/>
-                    
+                </form> 
+                <form>   
                     <div class="bottom">
                         <a href="#">Add a promo code</a><br/>
                         <input name="signup" type="submit" value="SIGN UP"/>
